--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div id="sponsorCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div class="d-flex justify-content-center align-items-center">
+                        <div class="d-flex justify-content-center align-items-center" style="width: 100%;">
                             <img src="img/sp1.png" alt="Sponsor 1" class="sponsor-logo mx-3">
                             <img src="img/sp2.png" alt="Sponsor 2" class="sponsor-logo mx-3">
                             <img src="img/sp3.png" alt="Sponsor 3" class="sponsor-logo mx-3">
@@ -105,7 +105,7 @@
                 surat ini kami sampaikan dengan hormat kepada Bapak/Ibu/Sdr/I untuk hadir dalam kegiatan kami
                 yaitu acara puncak Jatisari Festival 2024.
             </p>    
-            <a href="014.Surat Undangan Acara Puncak Jatisari Festival 2024.pdf" class="btn btn-warning btn-lg text-dark fw-bold" download="Surat Undangan Acara Puncak Jatisari Festival 2024.pdf">LIHAT SURAT</a>
+            <a href="Surat Undangan Jatisari Festival Vol.3.pdf" class="btn btn-warning btn-lg text-dark fw-bold" download="Surat Undangan Acara Puncak Jatisari Festival 2024.pdf">LIHAT SURAT</a>
         </div>
     </section>
 
@@ -119,7 +119,7 @@
     <section id="rundown-jafest" class="rundown-section">
         <div class="container text-center">
             <h2 class="section-title" style="color: #1256b4;;">RUNDOWN <span>JAFEST VOL3</span></h2>
-            <img src="img/rundown.jpeg" alt="Rundown Jafest Vol3" class="rundown-image">
+            <img src="img/1.png" alt="Rundown Jafest Vol3" class="rundown-image">
         </div>
     </section>
     
