--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 surat ini kami sampaikan dengan hormat kepada Bapak/Ibu/Sdr/I untuk hadir dalam kegiatan kami
                 yaitu acara puncak Jatisari Festival 2024.
             </p>    
-            <a href="Surat Undangan Jatisari Festival Vol.3.pdf" class="btn btn-warning btn-lg text-dark fw-bold" download="Surat Undangan Acara Puncak Jatisari Festival 2024.pdf">LIHAT SURAT</a>
+            <a href="Surat Undangan Jatisari Festival Vol.3 (1).pdf" class="btn btn-warning btn-lg text-dark fw-bold" download="Surat Undangan Acara Puncak Jatisari Festival 2024.pdf">LIHAT SURAT</a>
         </div>
     </section>
 
